src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__structs__two_cycles_branch_cc_and_cec.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: "&diagnostics"
---
error: Recursive data structure `C -> C` has infinite size
   ┌─ <internal>:10:18
   │
10 │             TYPE C : STRUCT
   │                  ^ Recursive data structure `C -> C` has infinite size

error: Recursive data structure `C -> E -> C` has infinite size
   ┌─ <internal>:10:18
   │
10 │             TYPE C : STRUCT
   │                  ^ Recursive data structure `C -> E -> C` has infinite size
   ·
15 │             TYPE E : STRUCT
   │                  - see also


